# RNMC_archived

./: .gitignore  README.md  build.sh  meson.build  shell.nix  test.sh
src/: RNMC.c  dispatcher.c  dispatcher.h  reaction_network.c  reaction_network.h  sampler.c  simulation.c  simulation.h  solvers.c  sql_programs.c  sql_programs.h  test.c
src_old/: dispatcher.c  reaction_network.c
test_materials/: initial_state.sqlite  rn.sqlite
